<resources>
    <string name="app_name">TWShop</string>
    <string name="souye">首页</string>
    <string name="classification">分类</string>
    <string name="shopcart">购物车</string>
    <string name="my">我的</string>

    //分类页面
    <string name="classify_tv_notice">搜索商品名称</string>
    <string name="classify_tv_hot">热门分类</string>


    //我的页面
    <string name="mine_tv_name">用户名</string>
    <string name="design_tv_call">联系我们</string>
    <string name="design_tv_out">退出当前账号</string>
    <string name="design_tv_phone">客服电话:</string>
    <string name="design_tv_sucess">退出成功</string>
    <string name="setting">设置</string>
    <string name="my_older">我的订单</string>
    <string name="my_address">收货地址</string>
    <string name="my_collection">我的收藏</string>
    <string name="call">客服电话</string>
    <string name="zhuangxiu">我要装修</string>

    //设置页面
    <string name="design_tv_title">设置</string>
    <string name="design_tv_msg">新消息管理</string>
    <string name="design_tv_card">管理银行卡</string>
    <string name="design_tv_login">更改登录密码</string>
    <string name="design_tv_spend">更改支付密码</string>
    <string name="design_tv_feedback">反馈与意见</string>


    //首页
    <string name="jintiruijian">今日推荐</string>
    <string name="jingpintuijian">精品推荐</string>
    <string name="xinping">新品抢先季</string>
    <string name="love">猜你喜欢</string>
    <string name="design_tv_clean">清理缓存</string>
    <string name="design_tv_version">版本信息</string>


    <!--注册-->
    <string name="register_now">立即注册</string>
    <string name="register_name">用户名:</string>
    <string name="register_number">请输入您的手机号</string>
    <string name="recommend_tels">请输入您推荐人的手机号</string>
    <string name="register_messagename">验证码:</string>
    <string name="register_message">请输入短信验证码</string>
    <string name="register_passwords">请输入密码</string>
    <string name="register_groupid">请选择身份</string>
    <string name="register_gongsi">请输入公司名字</string>
    <string name="register_passwordhit">请输入6-16位密码</string>
    <string name="register_password">密&#160;&#160;&#160;&#160;码:</string>
    <string name="register_get_messagecode">获取验证码</string>
    <string name="register_referees">推荐人:</string>
    <string name="register_referees_tel">请输入您推荐人的手机号码</string>


    <!--登录-->
    <string name="login_number">请输入注册的手机号</string>
    <string name="login_password">请输入密码</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="register">立即注册</string>
    <string name="login">登录</string>
    <string name="toast_login">请输入用户名和密码</string>
    <string name="toast_login_phone">请输入正确的手机号码</string>
    <string name="toast_recommend_tels">请输入正确的手机号码</string>
    <string name="toast_login_pwd">请输入密码</string>


    <!--忘记/修改密码-->
    <string name="forgot_passwordhead">忘记密码</string>
    <string name="forgot_number">请输入您注册的手机号</string>
    <string name="forgot_passwordagain">请输入新的登录密码</string>
    <string name="find_passwordagain">立即找回</string>
    <string name="change_passwordagain">立即修改</string>
    <string name="change_password">修改密码</string>
    <string name="find_password">找回密码</string>

    //网络请求提示
    <string name="err_alert">网络请求失败，请检查网络连接！</string>

    //重新登录
    <string name="login_alert">请重新登录</string>


    //搜索页面
    <string name="search_cancel">取消</string>
    <string name="search_history">搜索历史</string>
    <string name="search_clean_history">清除搜索历史</string>
    <string name="main_search">搜索商品名称</string>



    <!--personalactivity-->
    <string name="personal_text1">个人信息</string>
    <string name="personal_text2">姓名</string>
    <string name="personal_text3">用户名</string>
    <string name="personal_text4">密码修改</string>
    <string name="personal_text5">手机号</string>
    <string name="personal_text6">187*****723</string>
    <string name="personal_text7">我的银行卡</string>
    <string name="personal_text8">会员升级</string>
    <string name="personal_photo">访问相册存储权限被拒绝，请在"手机-设置"中手动允许</string>


    //相机 图库
    <string name="camera_tv_one">拍照</string>
    <string name="camera_tv_two">从图库中选择</string>
    <string name="camera_tv_three">取消</string>
    <string name="union_tv_camera">相机权限被拒绝，请在"手机-设置"中手动允许</string>
    <string name="mine_tv_personal">个人信息</string>
    <string name="setting_tv_address">收货地址</string>


    //购物车
    <string name="shop_title">购物车</string>
</resources>
