<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/register"
    android:orientation="vertical">

    <include layout="@layout/layout_head1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/y100"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y120"
            android:layout_marginTop="@dimen/y2"
            android:background="@mipmap/background_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/y18"
                android:gravity="center_vertical"
                android:text="@string/register_name"
                android:textColor="@color/white"
                android:textSize="@dimen/sp16" />

            <EditText
                android:id="@+id/newtel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/register_number"
                android:inputType="number"
                android:paddingLeft="@dimen/x35"
                android:textColorHint="@color/white"
                android:textSize="15dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y120"
            android:layout_marginTop="@dimen/y2"
            android:background="@mipmap/background_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/y18"
                android:gravity="center_vertical"
                android:text="@string/register_password"
                android:textColor="@color/white"
                android:textSize="@dimen/sp16" />

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/forgot_passwordagain"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/x35"
                android:textColorHint="@color/white"
                android:textSize="15dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y120"
            android:layout_marginTop="@dimen/y2"
            android:background="@mipmap/background_color"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/y18"
                android:gravity="center_vertical"
                android:text="@string/register_messagename"
                android:textColor="@color/white"
                android:textSize="@dimen/sp16" />

            <EditText
                android:id="@+id/newcode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.8"
                android:background="@null"
                android:hint="@string/register_message"
                android:inputType="number"
                android:paddingLeft="@dimen/x35"
                android:textColorHint="@color/white"
                android:textSize="15dp" />

            <Button
                android:id="@+id/newgetcode"
                android:layout_width="0dp"
                android:layout_height="@dimen/register_buttonheight"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/register_buttonmarginRight"
                android:layout_weight="1"
                android:background="@drawable/shape_message"
                android:singleLine="true"
                android:text="@string/register_get_messagecode"
                android:textColor="@color/white"
                android:textSize="@dimen/sp12" />


        </LinearLayout>

        <Button
            android:id="@+id/find_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginRight="@dimen/x20"
            android:layout_marginTop="@dimen/y50"
            android:background="@drawable/shape_message"
            android:text="@string/find_passwordagain"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16" />
    </LinearLayout>

</RelativeLayout>
