<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y100"
        android:background="@color/text_color"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/x30">


        <EditText
            android:id="@+id/search_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_corner"
            android:clickable="true"
            android:drawableLeft="@mipmap/search_1"
            android:drawablePadding="@dimen/x10"
            android:hint="@string/main_search"
            android:imeOptions="actionSearch"
            android:padding="@dimen/x12"
            android:singleLine="true"
            android:textColor="@color/black2c"
            android:textSize="@dimen/sp12" />

        <LinearLayout
            android:id="@+id/search_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingRight="@dimen/x30">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x30"
                android:text="@string/search_cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/sp14" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/x30"
        android:paddingRight="@dimen/x30"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/y60"
            android:gravity="center_vertical"
            android:text="@string/search_history"
            android:textColor="@color/black666"
            android:textSize="@dimen/sp12" />

        <ListView
            android:id="@+id/search_lv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

        </ListView>

        <TextView
            android:id="@+id/tv_clear"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x80"
            android:gravity="center"
            android:text="@string/search_clean_history"
            android:textColor="@color/black666"
            android:textSize="@dimen/sp12" />
    </LinearLayout>
</LinearLayout>