<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/register"
    android:orientation="vertical">

    <include layout="@layout/layout_head1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y120"
            android:layout_marginTop="@dimen/y2"
            android:background="@mipmap/background_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/register_tvmargin"
                android:gravity="center_vertical"
                android:text="@string/register_name"
                android:textColor="@color/white"
                android:textSize="@dimen/sp16" />

            <EditText
                android:id="@+id/register_tel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/register_number"
                android:inputType="number"
                android:paddingLeft="@dimen/x35"
                android:textColorHint="@color/white"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y120"
            android:layout_marginTop="@dimen/y2"
            android:background="@mipmap/background_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/register_tvmargin"
                android:gravity="center_vertical"
                android:text="@string/register_password"
                android:textColor="@color/white"
                android:textSize="@dimen/sp16" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/register_passwordhit"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/x35"
                android:textColorHint="@color/white"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y90"
            android:layout_marginTop="@dimen/y2"
            android:background="@mipmap/background_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/register_tvmargin"
                android:gravity="center_vertical"
                android:text="选择身份："
                android:textColor="@color/white"
                android:textSize="@dimen/sp16" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/caigou"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/x40"
                    android:layout_weight="1"
                    android:button="@mipmap/button"
                    android:paddingLeft="@dimen/x10"
                    android:text="采购商"
                    android:textColor="@color/white">

                </RadioButton>


                <RadioButton
                    android:id="@+id/gongying"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/x40"
                    android:layout_weight="1"
                    android:button="@mipmap/button"
                    android:paddingLeft="@dimen/x10"
                    android:text="供应商"
                    android:textColor="@color/white">

                </RadioButton>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y120"
            android:layout_marginTop="@dimen/y2"
            android:background="@mipmap/background_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/register_tvmargin"
                android:gravity="center_vertical"
                android:text="企业名称"
                android:textColor="@color/white"
                android:textSize="@dimen/sp16" />

            <EditText
                android:id="@+id/register_company"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="请填写企业名字"
                android:paddingLeft="@dimen/x35"
                android:textColorHint="@color/white"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y120"
            android:layout_marginTop="@dimen/y2"
            android:background="@mipmap/background_color"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/register_tvmargin"
                android:gravity="center_vertical"
                android:text="@string/register_messagename"
                android:textColor="@color/white"
                android:textSize="@dimen/sp16" />

            <EditText
                android:id="@+id/register_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.8"
                android:background="@null"
                android:hint="@string/register_message"
                android:inputType="number"
                android:paddingLeft="@dimen/x35"
                android:textColorHint="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/register_getcode"
                android:layout_width="0dp"
                android:layout_height="@dimen/y80"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/x18"
                android:layout_weight="1"
                android:background="@drawable/shape_message"
                android:singleLine="true"
                android:text="@string/register_get_messagecode"
                android:textColor="@color/white"
                android:textSize="@dimen/sp16" />


        </LinearLayout>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginRight="@dimen/x20"
            android:layout_marginTop="@dimen/y30"
            android:background="@drawable/shape_message"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16" />
    </LinearLayout>

</RelativeLayout>
